Adjusted file structure

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,6 +1,41 @@
-{% extends "base.html" %}
-{% block content %}
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sanctuary Supplement</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <header>
+      <nav>
+        Sanctuary Supplement: <a href="/index">Home</a>
+      </nav>
+    </header>
+    <main>
+      <h1>Hello World!</h1>
+      <div id="content"></div>
+    </main>
+    <footer>
+      Copyright 2017
+    </footer>
+    <!-- scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+    <script type="text/jsx">
 
-  <div id="content"></div>
+      /*** @jsx React.DOM */
 
-{% endblock %}
+      var realPython = React.createClass({
+        render: function() {
+          return (<h2>Greetings, from Real Python!</h2>);
+        }
+      });
+
+      ReactDOM.render(
+        React.createElement(realPython, null),
+        document.getElementById('content')
+      );
+
+    </script>
+  </body>
+</html>
