Edited script links for bower and babel

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -18,11 +18,11 @@
       Copyright 2017
     </footer>
     <!-- scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
-    <script type="text/jsx">
-
+    <script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='bower_components/react/react-dom.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='bower_components/babel/browser.min.js') }}"></script>
+    <script type="text/babel">
+    
       /*** @jsx React.DOM */
 
       var realPython = React.createClass({
