--- a/project/templates/sanctuary.html
+++ b/project/templates/sanctuary.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <main>
-      <h1>Hello World!</h1>
-      <div id="content"></div>
+      <h1>Sanctuary??</h1>
+      <div id="sanctuary"></div>
     </main>
     <!-- scripts -->
     <script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
