--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sanctuary Supplement</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -25,7 +25,7 @@
       ReactDOM.render(
        React.createElement(realPython, null),
        document.getElementById('content')
-      );		
+      );
 
     </script>
   </body>
