Still cannot get index.js and index.html to work together

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sanctuary Supplement</title>
-    <link rel="stylesheet" type="text/css" href="./style/style.css">
+    <link rel="stylesheet" type="text/css" href="../style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -14,19 +14,19 @@
     <script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bower_components/react/react-dom.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bower_components/babel/browser.min.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='index.js') }}"></script> -->
     <script type="text/babel">
  		  /*** @jsx React.DOM */
 		  var realPython = React.createClass({
-       render: function() {
+        render: function() {
           return (<h2>This uses React. Brilliant!</h2>);
         }
       });
 
       ReactDOM.render(
-       React.createElement(realPython, null),
-       document.getElementById('content')
+        React.createElement(realPython, null),
+        document.getElementById('content')
       );
-
     </script>
   </body>
 </html>
