Seeing app.js now but not yet working

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -14,7 +14,7 @@
     <script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bower_components/react/react-dom.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bower_components/babel/browser.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='app.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}" type="text/babel"></script>
     <script type="text/babel">
  		  /*** @jsx React.DOM */
 		  var realPython = React.createClass({
