Trying to get routing to work

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-      <div id="content"></div>
+      <div id="app"></div>
     </main>
     <!-- scripts -->
     <script type="text/javascript" src="{{ url_for('static', filename='bundle.js') }}"></script>
