--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Sanctuary Supplement</title>
+    <title>Sanctuary Secretary</title>
     <!-- <link rel="stylesheet" type="text/css" href="../static/style/style.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
