--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,6 @@
     </main>
     <!-- scripts -->
     <script type="text/javascript" src="{{ url_for('static', filename='bundle.js') }}"></script>
+    <script type=text/javascript src="{{ url_for('static', filename='jquery-3.1.1.min.js') }}"></script>
   </body>
 </html>
