--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sanctuary Secretary</title>
+    <script src="https://use.fontawesome.com/01cfcdd917.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="../static/style/style.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
