--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <title>Sanctuary Secretary</title>
     <script src="https://use.fontawesome.com/01cfcdd917.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="../static/style/style.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
