--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sanctuary Secretary</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="https://use.fontawesome.com/01cfcdd917.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Mogra|Roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
